feat:  Add the upload file registration cancellation API (#123)
* fix: Modify aurora API to increase the return of manifest
* feat: Add fileRegister API
