# openapi/Aurora.yaml
@@ -385,6 +385,51 @@ paths:
         default:
           description: Default response
 
+  "/fileRegister/{reference}":
+    parameters:
+      - in: path
+        name: reference
+        schema:
+          $ref: "AuroraCommon.yaml#/components/schemas/BosonReference"
+        required: true
+        description: Boson address of content
+    post:
+      summary: "FileRegister registers the information to the chain after the file upload is successful."
+      tags:
+        - File
+        - Collection
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "AuroraCommon.yaml#/components/schemas/HashResponse"
+        "404":
+          $ref: "AuroraCommon.yaml#/components/responses/404"
+        "500":
+          $ref: "AuroraCommon.yaml#/components/responses/500"
+        default:
+          description: Default response
+    delete:
+      summary: "Remove registration information from the chain."
+      tags:
+        - File
+        - Collection
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: "AuroraCommon.yaml#/components/schemas/HashResponse"
+        "404":
+          $ref: "AuroraCommon.yaml#/components/responses/404"
+        "500":
+          $ref: "AuroraCommon.yaml#/components/responses/500"
+        default:
+          description: Default response
+
   "/pins/{reference}":
     parameters:
       - in: path
